# httparse

./: .travis.yml  .travis_after.sh  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml  cibench.yml  cifuzz.yml
benches/: parse.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_chunk_size.rs  parse_headers.rs  parse_request.rs  parse_request_multspaces.rs  parse_response.rs  parse_response_multspaces.rs
src/: iter.rs  lib.rs  macros.rs
src/simd/: avx2.rs  fallback.rs  mod.rs  neon.rs  runtime.rs  sse42.rs  swar.rs
tests/: uri.rs
