[package]

name = "httparse"
version = "1.8.0"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT/Apache-2.0"
description = "A tiny, safe, speedy, zero-copy HTTP/1.x parser."
repository = "https://github.com/seanmonstar/httparse"
documentation = "https://docs.rs/httparse"
readme = "README.md"
keywords = ["http", "parser", "no_std"]
categories = ["network-programming", "no-std", "parser-implementations", "web-programming"]
edition = "2018"
build = "build.rs"

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.3.5"

[lib]
bench = false

[[bench]]
name = "parse"
harness = false

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
